--- a/rgirish2/Assignment1.1/CS242/.project
+++ b/rgirish2/Assignment1.1/CS242/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CS242</name>
+	<name>CS242-Assignment1.1</name>
 	<comment></comment>
 	<projects>
 	</projects>
