Updating project name.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CS242-Assignment1.1</name>
+	<name>AbstractChessGame</name>
 	<comment></comment>
 	<projects>
 	</projects>
